@@ -47,4 +47,50 @@ describe "customer index page" do
     click_on "Next"
     expect(page).to have_content(customers.last.name)
   end
+
+  describe "sorting" do
+    it "allows sorting by columns" do
+      create(:customer, name: "unique name two")
+      create(:customer, name: "unique name one")
+
+      visit admin_customers_path
+      click_on "Name"
+
+      expect_to_appear_in_order("unique name one", "unique name two")
+    end
+
+    it "allows reverse sorting" do
+      create(:customer, name: "unique name one")
+      create(:customer, name: "unique name two")
+
+      visit admin_customers_path
+      2.times { click_on "Name" }
+
+      expect_to_appear_in_order("unique name two", "unique name one")
+    end
+
+    it "toggles the order" do
+      create(:customer, name: "unique name one")
+      create(:customer, name: "unique name two")
+
+      visit admin_customers_path
+      3.times { click_on "Name" }
+
+      expect_to_appear_in_order("unique name one", "unique name two")
+    end
+
+    it "preserves search" do
+      query = "bar@baz.com"
+
+      visit admin_customers_path(search: query)
+      click_on "Name"
+
+      expect(find(".search__input").value).to eq(query)
+    end
+  end
+
+  def expect_to_appear_in_order(*elements)
+    positions = elements.map { |e| page.body.index(e) }
+    expect(positions).to eq(positions.sort)
+  end
 end
